Fix: body overflow-x

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -144,6 +144,7 @@ body {
   color: var(--granite-gray);
   font-size: 1.6rem;
   line-height: 1.7;
+  overflow-x: hidden;
 }
 
 :focus-visible {
